Add some grapic, Beat Alyze?

--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         </fieldset>
     </form>
     <div id="graphContainer" style="padding: 0;">
+        <canvas id="graphOverlayCanvas" style="margin: 0; padding: 0; position: absolute;">
+
+        </canvas>
         <canvas id="graphCanvas" style="margin: 0; padding: 0;">
 
         </canvas>
