--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <script src="./index.js" defer></script>
+    <script src="./index.js?ver=1" defer></script>
     <title>Learn Web Audio API</title>
 </head>
 <body>
